Split on components

--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,16 @@
 			}
 		],
 		"indent": ["error", "tab"],
+		"jsx-a11y/label-has-associated-control": [ "error", {
+			"required": {
+				"some": [ "nesting", "id"  ]
+			}
+		}],
+		"jsx-a11y/label-has-for": [ "error", {
+			"required": {
+				"some": [ "nesting", "id"  ]
+			}
+		}],
 		"react/jsx-props-no-spreading": "off",
 		"react/button-has-type": "off",
 		"import/prefer-default-export": "off",
