--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
 				"allowForLoopAfterthoughts": true
 			}
 		],
-		"indent": ["error", "tab"],
+		"indent": ["error", "tab", { "SwitchCase": 1 }],
 		"@typescript-eslint/no-unused-vars": [
 			"error",
 			{
