--- a/package.json
+++ b/package.json
@@ -3,67 +3,36 @@
 	"version": "0.1.0",
 	"homepage": "http://krav4enkodm.github.io/snake",
 	"private": true,
-	"dependencies": {
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
-		"classnames": "^2.3.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-scripts": "4.0.3",
-		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
-	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
+		"start": "webpack serve",
+		"build": "webpack",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"tsc": "tsc --noEmit",
+		"lint": "eslint --ext .js,.jsx,.ts,.tsx --fix --color",
 		"format": "prettier --write 'src/**/*.{ts,tsx,css,json}'",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
 	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+	"dependencies": {
+		"classnames": "^2.3.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^4.22.0",
-		"@typescript-eslint/parser": "^4.22.0",
-		"babel-eslint": "^10.1.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-airbnb-typescript": "^12.3.1",
-		"eslint-config-prettier": "^8.2.0",
-		"eslint-config-react-app": "^6.0.0",
-		"eslint-import-resolver-typescript": "^2.4.0",
-		"eslint-loader": "^4.0.2",
-		"eslint-plugin-flowtype": "^5.7.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"gh-pages": "^3.1.0",
-		"prettier": "^2.2.1",
-		"prettier-eslint": "^12.0.0",
-		"prettier-eslint-cli": "^5.0.1"
+		"@types/jest": "^27.4.0",
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.11",
+		"@types/webpack": "^5.28.0",
+		"css-loader": "^6.6.0",
+		"html-webpack-plugin": "^5.5.0",
+		"jest": "^27.5.1",
+		"style-loader": "^3.3.1",
+		"ts-jest": "^27.1.3",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.5.5",
+		"webpack": "^5.68.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.7.4"
 	}
 }
