--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
+    "baseUrl": "src",
+    "target": "ESNext",
+    "lib": ["DOM", "ESNext"],
+    "allowJs": false,
     "skipLibCheck": true,
+    "sourceMap": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": ["./typings.d.ts"],
+    "types": ["@types/jest", "@types/react", "@types/react-dom"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
