--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"tsc": "tsc --noEmit",
-		"lint": "eslint --ext .js,.jsx,.ts,.tsx --fix --color",
-		"format": "prettier --write 'src/**/*.{ts,tsx,css,json}'",
+		"lint": "eslint --fix --ext .ts,.tsx .",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
 	},
@@ -24,7 +23,11 @@
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
 		"@types/webpack": "^5.28.0",
+		"@typescript-eslint/eslint-plugin": "^5.11.0",
+		"@typescript-eslint/parser": "^5.11.0",
 		"css-loader": "^6.6.0",
+		"eslint": "^8.9.0",
+		"eslint-plugin-react": "^7.28.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.5.1",
 		"style-loader": "^3.3.1",
