--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"tsc": "tsc --noEmit",
-		"lint": "eslint --fix --ext .ts,.tsx .",
+		"lint:js": "eslint --fix --ext .ts,.tsx .",
+		"lint:css": "stylelint --fix '**/*.css'",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
 	},
@@ -31,6 +32,8 @@
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.5.1",
 		"style-loader": "^3.3.1",
+		"stylelint": "^14.5.0",
+		"stylelint-config-standard": "^25.0.0",
 		"ts-jest": "^27.1.3",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.5",
