--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"start": "webpack serve",
-		"build": "webpack",
+		"build": "webpack --config webpack.config.prod.js",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"tsc": "tsc --noEmit",
@@ -26,11 +26,13 @@
 		"@types/webpack": "^5.28.0",
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
+		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.6.0",
 		"eslint": "^8.9.0",
 		"eslint-plugin-react": "^7.28.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.5.1",
+		"mini-css-extract-plugin": "^2.5.3",
 		"style-loader": "^3.3.1",
 		"stylelint": "^14.5.0",
 		"stylelint-config-standard": "^25.0.0",
