--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint:js": "eslint --fix --ext .ts,.tsx .",
 		"lint:css": "stylelint --fix '**/*.css'",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"classnames": "^2.3.1",
@@ -30,6 +30,7 @@
 		"css-loader": "^6.6.0",
 		"eslint": "^8.9.0",
 		"eslint-plugin-react": "^7.28.0",
+		"gh-pages": "^3.2.3",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.5.1",
 		"mini-css-extract-plugin": "^2.5.3",
